feat: add fatwas endpoints and openapi docs + tests for fatwas and lessons
